--- a/app/components/subcase-demo/publication-status.hbs
+++ b/app/components/subcase-demo/publication-status.hbs
@@ -5,7 +5,7 @@
         <Auk::Toolbar::Group @position="left">
           <Auk::Toolbar::Item>
             <h4 class="auk-panel__title">
-              Status historiek
+              Publicatiestatussen
             </h4>
           </Auk::Toolbar::Item>
         </Auk::Toolbar::Group>
@@ -15,7 +15,7 @@
       <div class="auk-u-mb-2">
         <div class="au-u-flex au-u-flex--spaced-tiny">  
           <p class="au-u-medium">
-            Laatst gewijzigd op 02-02-2023
+            Laatst gewijzigd op 23-12-2023
           </p>
         </div>
       </div>
@@ -25,7 +25,7 @@
         >
           <div class="vlc-status-timeline__dot"></div>
           <div class="vlc-status-timeline__text">
-            Gepubliceerd op <AuLinkExternal @href="#!">02 februari 2023</AuLinkExternal>
+            Gepubliceerd op <AuLinkExternal @href="#!">23 december 2023</AuLinkExternal>
           </div>
         </li>
         <li
@@ -33,7 +33,7 @@
         >
           <div class="vlc-status-timeline__dot"></div>
           <div class="vlc-status-timeline__text">
-            Op te starten op <AuLinkExternal @href="#!">02 februari 2023</AuLinkExternal>
+            Op te starten op <AuLinkExternal @href="#!">21 december 2023</AuLinkExternal>
           </div>
         </li>
         <li
@@ -41,7 +41,7 @@
         >
           <div class="vlc-status-timeline__dot"></div>
           <div class="vlc-status-timeline__text">
-            Dringend op <AuLinkExternal @href="#!">02 februari 2023</AuLinkExternal>
+            Dringend op <AuLinkExternal @href="#!">20 december 2023</AuLinkExternal>
           </div>
         </li>
         <li
@@ -49,7 +49,7 @@
         >
           <div class="vlc-status-timeline__dot"></div>
           <div class="vlc-status-timeline__text">
-            In vertaling op <AuLinkExternal @href="#!">02 februari 2023</AuLinkExternal>
+            In vertaling op <AuLinkExternal @href="#!">19 december 2023</AuLinkExternal>
           </div>
         </li>
         <li
@@ -57,7 +57,7 @@
         >
           <div class="vlc-status-timeline__dot"></div>
           <div class="vlc-status-timeline__text">
-            Aanvraag drukproef op <AuLinkExternal @href="#!">02 februari 2023</AuLinkExternal>
+            Aanvraag drukproef op <AuLinkExternal @href="#!">18 december 2023</AuLinkExternal>
           </div>
         </li>
       </ul>
