--- a/app/components/subcase-demo/vp-title.hbs
+++ b/app/components/subcase-demo/vp-title.hbs
@@ -13,7 +13,7 @@
         </Auk::Toolbar::Group>
         <Auk::Toolbar::Group @position="right">
           <Auk::Toolbar::Item>
-            <AuLinkExternal @icon="external" @iconAlignment="right" @href="!#">Naar Vlaams Parlement</AuLinkExternal>
+            <AuLinkExternal @icon="external" @iconAlignment="right" href="https://www.vlaamsparlement.be/nl/parlementaire-documenten/parlementaire-initiatieven/1671548">Naar Vlaams Parlement</AuLinkExternal>
           </Auk::Toolbar::Item>
         </Auk::Toolbar::Group>
       </Auk::Toolbar>
@@ -45,7 +45,7 @@
         >
           <div class="vlc-status-timeline__dot"></div>
           <div class="vlc-status-timeline__text">
-            Aangenomen in plenaire vergadering op 14 oktober 2023
+            Aangenomen in plenaire vergadering op <AuLinkExternal @icon="external" @iconAlignment="right" href="https://www.vlaamsparlement.be/nl/parlementaire-documenten/parlementaire-initiatieven/1671548">03 september 2023</AuLinkExternal>
           </div>
         </li>
         <li
@@ -53,7 +53,7 @@
         >
           <div class="vlc-status-timeline__dot"></div>
           <div class="vlc-status-timeline__text">
-            Bekrachtigd en afgekondigd op 14 oktober 2023
+            Bekrachtigd en afgekondigd op <AuLinkExternal @icon="external" @iconAlignment="right" href="https://www.vlaamsparlement.be/nl/parlementaire-documenten/parlementaire-initiatieven/1671548">03 september 2023</AuLinkExternal>
           </div>
         </li>
         <li
@@ -61,7 +61,7 @@
         >
           <div class="vlc-status-timeline__dot"></div>
           <div class="vlc-status-timeline__text">
-            Bekendgemaakt in het Belgisch Staatsblad op 14 oktober 2023
+            Bekendgemaakt in het Belgisch Staatsblad op <AuLinkExternal @icon="external" @iconAlignment="right" href="https://www.vlaamsparlement.be/nl/parlementaire-documenten/parlementaire-initiatieven/1671548">03 september 2023</AuLinkExternal>
           </div>
         </li>
       </ul>
