--- a/app/templates/cases/case/subcases-demo/subcase-demo/final-approval.hbs
+++ b/app/templates/cases/case/subcases-demo/subcase-demo/final-approval.hbs
@@ -83,7 +83,7 @@
   <Documents::LinkedDocumentsPanel @agendaitemOrSubcase={{this.subcase}}  class="c-linked-documents"/>
 
   <div id="agenda">
-     <Subcase::SubcaseVersionsPanel @subcase={{@model.subcase}} @demo={{true}} />
+     <Subcase::SubcaseVersionsPanel @subcase={{@model.subcase}} @demo={{true}} @step="Definitieve goedkeuring" />
   </div>
 
  
