--- a/app/components/subcase-demo/publication-title.hbs
+++ b/app/components/subcase-demo/publication-title.hbs
@@ -13,7 +13,10 @@
         </Auk::Toolbar::Group>
         <Auk::Toolbar::Group @position="right">
           <Auk::Toolbar::Item>
-            <AuLinkExternal @icon="external" @iconAlignment="right" @href="!#">Naar staatsblad</AuLinkExternal>
+            <AuLinkExternal @icon="external" @iconAlignment="right" @href="!#">Codex</AuLinkExternal>
+          </Auk::Toolbar::Item>
+           <Auk::Toolbar::Item>
+            <AuLinkExternal @icon="external" @iconAlignment="right" @href="!#">Belgisch Staatsblad</AuLinkExternal>
           </Auk::Toolbar::Item>
         </Auk::Toolbar::Group>
       </Auk::Toolbar>
@@ -29,15 +32,11 @@
       <div class="au-o-grid au-o-grid--small au-u-1-1">
         <div class="au-o-grid__item au-u-1-2 au-u-1-4@medium">
           <AuHeading @level="4" @skin="6">Status</AuHeading>
-          <AuPill @skin="success" @size="small">Gepubliceerd</AuPill>
+          <AuPill @skin="warning" @size="small">In vertaling</AuPill>
         </div>
         <div class="au-o-grid__item au-u-1-2 au-u-1-4@medium">
-          <AuHeading @level="4" @skin="6">Numa nummer</AuHeading>
+          <AuHeading @level="4" @skin="6">Numac nummer</AuHeading>
           <p class="auk-u-mt-1">2022031830</p>
-        </div>
-        <div class="au-o-grid__item au-u-1-2 au-u-1-4@medium">
-          <AuHeading @level="4" @skin="6">Datum ontvangst</AuHeading>
-          <p class="auk-u-mt-1">23-12-2023</p>
         </div>
       </div>
     </Auk::Panel::Body>
