--- a/app/components/subcase-demo/vp-title.hbs
+++ b/app/components/subcase-demo/vp-title.hbs
@@ -25,7 +25,7 @@
       <div class="au-o-grid au-o-grid--small au-u-1-1">
         <div class="au-o-grid__item au-u-1-2 au-u-1-4@medium">
           <AuHeading @level="4" @skin="6">Status</AuHeading>
-          <AuPill @skin="success" @size="small">Aangenomen</AuPill>
+          <AuPill @skin="warning" @size="small">Plenaire vergadering</AuPill>
         </div>
         <div class="au-o-grid__item au-u-1-2 au-u-1-4@medium">
           <AuHeading @level="4" @skin="6">Nummer</AuHeading>
