--- a/app/templates/cases/case/subcases-demo/subcase-demo/ratification.hbs
+++ b/app/templates/cases/case/subcases-demo/subcase-demo/ratification.hbs
@@ -5,7 +5,7 @@
       @meeting={{this.meeting}}
       @allowEditing={{user-may "manage-cases"}}
       @step="Bekrachtiging"
-      @status="Akte genomen"
+      @status="Act in afwachting"
     />
   </div>
   <Mandatees::MandateesPanel
