--- a/app/components/subcase-demo/subcase-titles-panel/subcase-titles-panel-view.hbs
+++ b/app/components/subcase-demo/subcase-titles-panel/subcase-titles-panel-view.hbs
@@ -56,7 +56,11 @@
       <div class="au-o-grid au-u-1-1">
         <div class="au-o-grid__item au-u-1-2 au-u-1-4@medium">
           <AuHeading @level="4" @skin="6">Status</AuHeading>
+          {{#if (eq @status 'Act in afwachting')}}
+          <AuPill @skin="warning" @size="small">{{@status}}</AuPill>
+          {{else}}
           <AuPill @skin="success" @size="small">{{@status}}</AuPill>
+          {{/if}}
         </div>
       </div>
     </Auk::Panel::Body>
