--- a/app/templates/cases/case/subcases-demo/subcase-demo.hbs
+++ b/app/templates/cases/case/subcases-demo/subcase-demo.hbs
@@ -38,7 +38,7 @@
                   Laatste wijziging op 23-12-2023 17:02
                 </div>
                 <div class="au-u-margin-top-tiny">
-                  <AuPill @size="small" @skin="success">Gepubliceerd</AuPill>
+                  <AuPill @size="small" @skin="warning">In vertaling</AuPill>
                 </div>
               </LinkTo>
             </li>
@@ -56,7 +56,7 @@
                   Laatste wijziging op 11-10-2023 17:02
                 </div>
                 <div class="au-u-margin-top-tiny">
-                  <AuPill @size="small" @skin="success">Akte genomen</AuPill>
+                  <AuPill @size="small" @skin="warning">Act in afwachting</AuPill>
                 </div>
               </LinkTo>
             </li>
@@ -74,7 +74,7 @@
                   Laatste wijziging op 03-09-2023 17:02
                 </div>
                 <div class="au-u-margin-top-tiny">
-                  <AuPill @size="small" @skin="success">Aangenomen</AuPill>
+                  <AuPill @size="small" @skin="warning">Plenaire vergadering</AuPill>
                 </div>
               </LinkTo>
             </li>
