--- a/app/components/subcases/subcase-detail-nav.hbs
+++ b/app/components/subcases/subcase-detail-nav.hbs
@@ -10,7 +10,7 @@
         <a href="#documents" class="js-anchor">Besluit(en) info</a>
       </li>
       <li>
-        <a href="#agenda" class="js-anchor">Statussen</a>
+        <a href="#agenda" class="js-anchor">Publicatiestatussen</a>
       </li>
     </ul>
   </div>
@@ -40,7 +40,7 @@
         <a href="#documents" class="js-anchor">Documenten</a>
       </li>
       <li>
-        <a href="#agenda" class="js-anchor">Agendaversies</a>
+        <a href="#agenda" class="js-anchor">Agenderingen</a>
       </li>
     </ul>
   </div>
