KAS-4320: create government-area-filter component and apply to all search routes except for publications

--- a/app/templates/search.hbs
+++ b/app/templates/search.hbs
@@ -56,6 +56,12 @@
               @showPastMinisters={{true}}
             />
           </div>
+          <div class="au-c-card au-o-box au-o-box--small">
+            <Search::GovernmentAreaFilter
+              @selected={{this.governmentAreas}}
+              @onChange={{this.setGovernmentAreas}}
+            />
+          </div>
         </div>
       </div>
     </div>
