--- a/app/components/subcase/subcase-versions-panel/subcase-versions-view.hbs
+++ b/app/components/subcase/subcase-versions-panel/subcase-versions-view.hbs
@@ -5,7 +5,7 @@
         <Auk::Toolbar::Group @position="left">
           <Auk::Toolbar::Item>
             <h4 class="auk-panel__title">
-              Agenderingen
+              {{#if (eq @demoTwo true)}}Statussen{{else}}Agenderingen{{/if}}
             </h4>
           </Auk::Toolbar::Item>
         </Auk::Toolbar::Group>
@@ -63,15 +63,15 @@
         </div>
       </div>
       <ul class="vlc-status-timeline">
-        {{!-- <li
+        <li
           class="vlc-status-timeline__item vlc-status-timeline__item--neutral"
         >
           <div class="vlc-status-timeline__dot"></div>
           <div class="vlc-status-timeline__text">
-            Geagendeerd op de agenda van <AuLinkExternal @href="#!">{{#if (eq @step 'Definitieve goedkeuring')}}28 augustus 2023{{else if (eq @step 'Tweede principiële goedkeuring')}}13 juni 2023{{else if (eq @step 'Eerste principiële goedkeuring')}}01 april 2023{{else}}11 november 2023{{/if}}</AuLinkExternal>
+            Act in afwachting op <AuLinkExternal @href="#!">11 november 2023</AuLinkExternal>
           </div>
-        </li> --}}
-        <li
+        </li>
+        {{!-- <li
           class="vlc-status-timeline__item vlc-status-timeline__item--neutral"
         >
           <div class="vlc-status-timeline__dot"></div>
@@ -94,7 +94,7 @@
           <div class="vlc-status-timeline__text">
             Geagendeerd op de agenda van <AuLinkExternal @href="#!">11 oktober 2023</AuLinkExternal>
           </div>
-        </li>
+        </li> --}}
       </ul>
       {{else}}
       <div class="auk-u-mb-2">
