--- a/app/templates/cases/case/subcases-demo/subcase-demo/vp.hbs
+++ b/app/templates/cases/case/subcases-demo/subcase-demo/vp.hbs
@@ -167,7 +167,7 @@
           >
             <div class="vlc-status-timeline__dot"></div>
             <div class="vlc-status-timeline__text au-u-flex au-u-flex--spaced-tiny au-u-1-1">
-              Verzonden op 22 november 2023 <AuButton @skin="link" @icon="chevron-right" @iconAlignment="right" {{on 'click' this.showVpModal}}>Bekijk documenten</AuButton>
+              Upgedate op 22 november 2023 <AuButton @skin="link" @icon="chevron-right" @iconAlignment="right" {{on 'click' this.showVpModal}}>Bekijk documenten</AuButton>
             </div>
           </li>
           <li
@@ -183,7 +183,7 @@
           >
             <div class="vlc-status-timeline__dot"></div>
             <div class="vlc-status-timeline__text au-u-flex au-u-flex--spaced-tiny au-u-1-1">
-               Dringend op 15 november 2023 <AuButton @skin="link" @icon="chevron-right" @iconAlignment="right" {{on 'click' this.showVpModal}}>Bekijk documenten</AuButton>
+               Verzonden op 15 november 2023 <AuButton @skin="link" @icon="chevron-right" @iconAlignment="right" {{on 'click' this.showVpModal}}>Bekijk documenten</AuButton>
             </div>
           </li>
         </ul>
