--- a/app/components/documents/document-card/edit-modal.hbs
+++ b/app/components/documents/document-card/edit-modal.hbs
@@ -38,7 +38,7 @@
         {{#if (or @piece.file.created @piece.created)}}
           <AuHelpText @skin="secondary">
             {{t "uploaded-at"}}
-            {{or (datetime-at @piece.file.created) (datetime-at @piece.created)}}
+            {{datetime-at (or @piece.file.created @piece.created)}}
           </AuHelpText>
         {{/if}}
       </c.header>
