--- a/app/components/documents/linked-document-link.hbs
+++ b/app/components/documents/linked-document-link.hbs
@@ -27,7 +27,7 @@
             <div class="vlc-document-card-content__meta">
               {{#if this.lastPiece.file.created}}
                 {{t "uploaded-at"}}
-                {{or (datetime-at this.lastPiece.file.created) (datetime-at this.lastpiece.created)}}
+                {{datetime-at (or this.lastPiece.file.created this.lastpiece.created)}}
               {{/if}}
             </div>
           </Group.Item>
@@ -95,7 +95,7 @@
                   <div class="vlc-document-card-item__meta au-u-muted">
                     {{#if piece.file.created}}
                       {{t "uploaded-at"}}
-                      {{or (datetime-at piece.file.created) (datetime-at piece.created)}}
+                      {{datetime-at (or piece.file.created piece.created)}}
                     {{/if}}
                   </div>
                   <div class="vlc-document-card-item__icon">
