--- a/app/components/documents/document-card.hbs
+++ b/app/components/documents/document-card.hbs
@@ -333,7 +333,7 @@
         @onDelete={{perform this.deleteUploadedPiece}}
       />
     {{else}}
-      <Auk::FileUploader @onUpload={{perform this.uploadPiece}} />
+      <Auk::FileUploader @multiple={{false}} @onUpload={{perform this.uploadPiece}} />
     {{/if}}
   </:body>
 </ConfirmationModal>
