--- a/app/components/documents/document-card/edit-modal.hbs
+++ b/app/components/documents/document-card/edit-modal.hbs
@@ -45,6 +45,7 @@
       {{#if this.isReplacingSourceFile}}
         <c.content data-test-document-edit-source-file-replacer>
           <Auk::FileUploader
+            @multiple={{false}}
             @onUpload={{set this "replacementSourceFile"}}
             @onQueueUpdate={{this.handleReplacementSourceFileUploadQueue}}
           />
@@ -97,6 +98,7 @@
         {{#if this.isReplacingDerivedFile}}
           <c.content data-test-document-edit-derived-file-replacer>
             <Auk::FileUploader
+              @multiple={{false}}
               @onUpload={{set this "replacementDerivedFile"}}
               @onQueueUpdate={{this.handleReplacementDerivedFileUploadQueue}}
             />
@@ -119,6 +121,7 @@
         </c.header>
         <c.content data-test-document-edit-derived-file-uploader>
           <Auk::FileUploader
+            @multiple={{false}}
             @onUpload={{set this "uploadedDerivedFile"}}
             @onQueueUpdate={{this.handleDerivedFileUploadQueue}}
           />
