KAS-4461: added reloading of parliamentFlow.status after sending to VP and added refresh of route to update alert

--- a/app/templates/agenda/agendaitems/agendaitem/index.hbs
+++ b/app/templates/agenda/agendaitems/agendaitem/index.hbs
@@ -32,6 +32,7 @@
         @subcase={{this.subcase}}
         @reverseSortedAgendas={{this.reverseSortedAgendas}}
         @onDeleteAgendaitem={{this.reassignNumbersAndNavigateToNeighbouringAgendaitem}}
+        @onSendToVP={{this.refresh}}
       />
     </Group.Item>
   </Toolbar.Group>
