KAS-4320 review changes, add plausible, fix issues

--- a/app/components/search/government-area-filter.hbs
+++ b/app/components/search/government-area-filter.hbs
@@ -7,7 +7,7 @@
     @selectedItems={{this.selectedCurrentGovernmentAreas}}
     @didUpdate={{this.onChangeCurrentGovernmentAreas}}
   />
-    {{#if this.showPastGovernmentAreas}}
+    {{#if @showPastGovernmentAreas}}
       {{#if this.deprecatedGovernmentAreasHidden}}
         <AuButton
           {{on "click" (toggle "deprecatedGovernmentAreasHidden" this)}}
