--- a/app/templates/search.hbs
+++ b/app/templates/search.hbs
@@ -60,6 +60,7 @@
             <Search::GovernmentAreaFilter
               @selected={{this.governmentAreas}}
               @onChange={{this.setGovernmentAreas}}
+              @showPastGovernmentAreas={{true}}
             />
           </div>
         </div>
