--- a/app/templates/search/all-types.hbs
+++ b/app/templates/search/all-types.hbs
@@ -98,6 +98,8 @@
               @modifiedDate={{row.data.modified}}
               @shortTitle={{row.data.shortTitle}}
               @title={{row.data.title}}
+              @statusPillStep={{row.data.statusPillStep}}
+              @statusPillKey={{row.data.statusPillKey}}
               @status={{row.data.status}}
               @decisionmakingFlowId={{row.data.decisionmakingFlowId}}
             />
