--- a/app/components/utils/toaster/copy-error-to-clipboard-toast.hbs
+++ b/app/components/utils/toaster/copy-error-to-clipboard-toast.hbs
@@ -10,5 +10,8 @@
     <div class="au-u-margin-top-small au-o-box--small au-u-background-gray-100 au-u-word-break">
       <Utils::ClipboardableContent @content={{@options.errorContent}} />
     </div>
+    {{#if @options.showDatetime}}
+      <p class="toast-timestamp">{{datetime-at-phrase-weekday (current-datetime)}}</p>
+    {{/if}}
   </div>
 </AuAlert>
