--- a/app/templates/agenda/agendaitems/agendaitem/index.hbs
+++ b/app/templates/agenda/agendaitems/agendaitem/index.hbs
@@ -32,7 +32,7 @@
         @subcase={{this.subcase}}
         @reverseSortedAgendas={{this.reverseSortedAgendas}}
         @onDeleteAgendaitem={{this.reassignNumbersAndNavigateToNeighbouringAgendaitem}}
-        @onSendToVP={{this.refresh}}
+        @onSendToVp={{this.refresh}}
       />
     </Group.Item>
   </Toolbar.Group>
