KAS-4363: created feature flag util and removed unused feature flags

--- a/app/components/agenda/agenda-header/agenda-tabs.hbs
+++ b/app/components/agenda/agenda-header/agenda-tabs.hbs
@@ -22,7 +22,7 @@
   <Auk::Tab @route="agenda.documents">
     {{t "documents"}}
   </Auk::Tab>
-  {{#if (and (not @currentMeeting.isPreDigitalMinutes) this.enableDigitalMinutes)}}
+  {{#if (not @currentMeeting.isPreDigitalMinutes)}}
     <Auk::Tab @route="agenda.minutes">
       {{t "minutes"}}
     </Auk::Tab>
