--- a/app/templates/signatures/ongoing.hbs
+++ b/app/templates/signatures/ongoing.hbs
@@ -5,6 +5,14 @@
     <div class="au-c-sidebar">
       <div class="au-c-sidebar__content">
         <div class="au-o-box au-o-box--small au-o-flow au-o-flow--tiny">
+          <Search::DateRangeFilter
+            @dateFrom={{this.dateFrom}}
+            @dateTo={{this.dateTo}}
+            @onDateFromChange={{this.setDateFrom}}
+            @onDateToChange={{this.setDateTo}}
+            @onDateFromClear={{set this "dateFrom" undefined}}
+            @onDateToClear={{set this "dateTo" undefined}}
+          />
           <div data-test-route-signatures-ongoing-status-filter class="au-c-card au-o-box au-o-box--small">
             <Auk::Label>{{t "status"}}</Auk::Label>
             <Signatures::StatusFilter
@@ -42,10 +50,11 @@
       @onClickRow={{this.navigateToSignFlow}}
       >
       <:header>
-        <th class="auk-table__col--6">{{t "document-name"}}</th>
+        <th class="auk-table__col--4">{{t "document-name"}}</th>
         <th class="auk-table__col--1">{{t "document-type"}}</th>
-        <th class="auk-table__col--1">{{t "ministers"}}</th>
-        <th class="auk-table__col--2">{{t "date-approved"}}</th>
+        <th class="auk-table__col--2">{{t "ministers"}}</th>
+        <th class="auk-table__col--1">{{t "date-approved"}}</th>
+        <th class="auk-table__col--2">{{t "started-by"}}</th>
         <th class="auk-table__col--2">{{t "status"}}</th>
         <th class="auk-table__col--1"></th>
         </:header>
@@ -86,6 +95,9 @@
           </td>
           <td>
             {{date signFlow.decisionActivity.startDate}}
+          </td>
+          <td>
+            {{signFlow.creator.fullName}}
           </td>
           <td>
             <SignaturePill
